# SoftRasterization

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/crystal_maiden/: crystal_maiden_econ.fbx  crystal_maiden_econ.ma
res/crystal_maiden/materials/: crystal_maiden_arms_fresnelWarpRim.tga  crystal_maiden_back_color.tga  crystal_maiden_back_diffuseWarpMask.tga  crystal_maiden_back_metalnessMask.tga  crystal_maiden_back_normal.tga  crystal_maiden_back_rimMask.tga  crystal_maiden_back_selfIllumMask.tga  crystal_maiden_back_specularExponent.tga  crystal_maiden_back_specularMask.tga  crystal_maiden_back_tintByBaseMask.tga  crystal_maiden_head_color.tga  crystal_maiden_head_detailMask.tga  crystal_maiden_head_diffuseWarpMask.tga  crystal_maiden_head_metalnessMask.tga  crystal_maiden_head_normal.tga  crystal_maiden_head_rimMask.tga  crystal_maiden_head_selfIllumMask.tga  crystal_maiden_head_specularExponent.tga  crystal_maiden_head_specularMask.tga  crystal_maiden_head_tintByBaseMask.tga  crystal_maiden_shoulder_color.tga  crystal_maiden_shoulder_detailMask.tga  crystal_maiden_shoulder_diffuseWarpMask.tga  crystal_maiden_shoulder_metalnessMask.tga  crystal_maiden_shoulder_normal.tga  crystal_maiden_shoulder_rimMask.tga  crystal_maiden_shoulder_selfIllumMask.tga  crystal_maiden_shoulder_specularExponent.tga  crystal_maiden_shoulder_specularMask.tga  crystal_maiden_shoulder_tintByBaseMask.tga  crystal_maiden_weapon_color.tga  crystal_maiden_weapon_cubeMap.tga  crystal_maiden_weapon_diffuseWarp.tga  crystal_maiden_weapon_fresnelWarpColor.tga  crystal_maiden_weapon_metalnessMask.tga  crystal_maiden_weapon_normal.tga  crystal_maiden_weapon_rimMask.tga  crystal_maiden_weapon_selfIllumMask.tga  crystal_maiden_weapon_specularExponent.tga  crystal_maiden_weapon_specularMask.tga  (+1 more)
res/crystal_maiden/materials/base/: __crystal_maiden_base_fresnelWarpSpec.tga
src/: Color.h  Common.cpp  Common.h  Index.h  Light.h  Material.h  Matrix4.h  Mesh.h  Model.cpp  Model.h  Render.cpp  Render.h  Sgmath.cpp  Sgmath.hpp  Texture.h  TextureManager.cpp  TextureManager.h  Vector2.h  Vector3.h  Vector4.h  Vertex.h  main.cpp  slm.h  test.cpp  test.h
